--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <meta http-equiv="Content-type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0">
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
+        <meta HTTP-EQUIV="Pragma" CONTENT="no-cache" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <link rel="stylesheet" type="text/css" href="css/icons.css" />    
         <!--
@@ -82,6 +82,11 @@
         <script type="text/javascript" src="js/jqxscrollbar.js"></script>
         <script type="text/javascript" src="js/jqxlistbox.js"></script>
         <script type="text/javascript" src="js/globalization/globalize.js"></script>
+
+        <link rel="stylesheet" href="css/default.css" type="text/css" />
+        <link rel="stylesheet" href="css/default.date.css" type="text/css" />
+        <script type="text/javascript" src="js/picker.js"></script>
+        <script type="text/javascript" src="js/picker.date.js"></script>
 
         <script type="text/javascript" src="js/responsive-calendar.js"></script>
         <link rel="stylesheet" href="css/responsive-calendar.css" type="text/css" />
